[gd_scene load_steps=2 format=3 uid="uid://dmgqgxf4r26di"]

[ext_resource type="Script" path="res://scripts/profile_menu.gd" id="1_isik3"]

[node name="profile_menu" type="CanvasLayer" node_paths=PackedStringArray("view_profile_button", "edit_profile_button", "back_to_network_button", "back_to_profile_button", "back_to_profile_edit_button", "save_profile_button")]
script = ExtResource("1_isik3")
view_profile_button = NodePath("ColorRect/Select/PanelContainer/MarginContainer/VBoxContainer/ViewProfile")
edit_profile_button = NodePath("ColorRect/Select/PanelContainer/MarginContainer/VBoxContainer/EditProfile")
back_to_network_button = NodePath("ColorRect/Select/PanelContainer/MarginContainer/VBoxContainer/BackNetwork")
back_to_profile_button = NodePath("ColorRect/ViewProfileInfo/PanelContainer/MarginContainer/VBoxContainer/BackProfile")
back_to_profile_edit_button = NodePath("ColorRect/EditProfileInfo/BackProfileEdit")
save_profile_button = NodePath("ColorRect/EditProfileInfo/SaveInfo")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.560784, 0.705882, 0.807843, 1)

[node name="Select" type="CenterContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -345.0
offset_top = -433.5
offset_right = 345.0
offset_bottom = 433.5
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="ColorRect/Select"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/Select/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Select/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Profile" type="Label" parent="ColorRect/Select/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Profile"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ColorRect/Select/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="ViewProfile" type="Button" parent="ColorRect/Select/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "View Profile"

[node name="EditProfile" type="Button" parent="ColorRect/Select/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Edit Profile"

[node name="BackNetwork" type="Button" parent="ColorRect/Select/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Back to Network Menu"

[node name="ViewProfileInfo" type="CenterContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -686.5
offset_top = -490.0
offset_right = 686.5
offset_bottom = 490.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="ColorRect/ViewProfileInfo"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/ViewProfileInfo/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 600
theme_override_constants/margin_top = 400
theme_override_constants/margin_right = 600
theme_override_constants/margin_bottom = 400

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ViewProfileInfo/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="UserName" type="Label" parent="ColorRect/ViewProfileInfo/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ColorRect/ViewProfileInfo/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="ProfileInfo" type="Label" parent="ColorRect/ViewProfileInfo/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Test info"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackProfile" type="Button" parent="ColorRect/ViewProfileInfo/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Back to Profile"

[node name="EditProfileInfo" type="Control" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -686.5
offset_top = -490.0
offset_right = 686.5
offset_bottom = 490.0
grow_horizontal = 2
grow_vertical = 2

[node name="UserNameEdit" type="LineEdit" parent="ColorRect/EditProfileInfo"]
layout_mode = 2
anchor_left = -0.172
anchor_top = 0.003
anchor_right = 0.292
anchor_bottom = 0.136
offset_left = 0.656006
offset_top = 0.0599999
offset_right = -0.416046
offset_bottom = -0.280014
theme_override_font_sizes/font_size = 70
placeholder_text = "Edit User Name"
max_length = 18

[node name="ProfileInfoEdit" type="TextEdit" parent="ColorRect/EditProfileInfo"]
layout_mode = 2
anchor_left = -0.176
anchor_top = 0.164
anchor_right = 0.306
anchor_bottom = 0.823
offset_left = 0.148026
offset_top = 0.279999
offset_right = -0.638031
offset_bottom = 0.459961
theme_override_font_sizes/font_size = 40
placeholder_text = "Edit Profile Info"
wrap_mode = 1

[node name="BackProfileEdit" type="Button" parent="ColorRect/EditProfileInfo"]
layout_mode = 2
anchor_left = 0.451
anchor_top = 0.282
anchor_right = 0.698
anchor_bottom = 0.432
offset_left = 0.276978
offset_top = -0.360016
offset_right = 0.145996
offset_bottom = -0.360016
theme_override_font_sizes/font_size = 40
text = "Back to Profile"

[node name="SaveInfo" type="Button" parent="ColorRect/EditProfileInfo"]
layout_mode = 2
anchor_left = 0.451
anchor_top = 0.122
anchor_right = 0.698
anchor_bottom = 0.272
offset_left = 0.276978
offset_top = 0.439995
offset_right = 0.145996
offset_bottom = 0.439972
theme_override_font_sizes/font_size = 40
text = "Save Info"
